# null-chat

./: Cargo.toml  LICENSE  README.md
gui/: main.py
src/: app.rs  main.rs  model.rs  panic_engine.rs
src/crypto/: identity.rs  kdf.rs  kem.rs  mod.rs  ratchet.rs
src/network/: mod.rs  p2p.rs  tor_manager.rs  traffic_morph.rs
src/protocol/: discord.rs  matrix.rs  mod.rs  ncp.rs
src/storage/: mod.rs  secure_delete.rs  vault.rs
src/ui/: command_center.rs  message_view.rs  mod.rs  sidebar.rs  theme.rs
