[package]
name = "null-chat"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "null-chat"
path = "src/main.rs"

[dependencies]
tokio             = { version = "1",    features = ["full"] }
iced              = { version = "0.12", features = ["tokio"] }
argon2            = "0.5"
chacha20poly1305  = "0.10"
aes-gcm           = "0.10"
x25519-dalek      = { version = "2",    features = ["static_secrets"] }
ed25519-dalek     = { version = "2",    features = ["rand_core"] }
pqcrypto-kyber    = "0.7"
pqcrypto-traits   = "0.3"
sha3              = "0.10"
hkdf              = "0.12"
hmac              = "0.12"
heed              = "0.20"
rand              = "0.8"
rand_core         = { version = "0.6",  features = ["getrandom"] }
zeroize           = { version = "1",    features = ["derive"] }
secrecy           = "0.8"
serde             = { version = "1",    features = ["derive"] }
serde_bytes       = "0.11"
serde_json        = "1"
uuid              = { version = "1",    features = ["v4"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror         = "1"
anyhow            = "1"
hex               = "0.4"
tokio-socks       = "0.5"
generic-array     = "0.14"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = "symbols"
